update to java 17 and some code cleanup
Clean up usage of deprecated methods
Upgrade to java 17 and gradle 7.5.
Update dependencies